@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-15T01:15:00Z",
-  "count_outdated" : 107,
-  "uniques_outdated" : 63,
+  "timestamp" : "2025-04-24T01:14:19Z",
+  "count_outdated" : 108,
+  "uniques_outdated" : 64,
   "count" : 109,
   "uniques" : 65,
   "views" : [
-    {
-      "timestamp": "2025-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-14T00:00:00Z",
       "count": 1,
